--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </style>
 
 <div style='position: fixed; top: 10px; width:100%; text-align: center; z-index: 1;'>
-  <button type="button" class="btn1" id="boton1"><b>Cachorro Dálmata</b></button>
+  <button type="button" class="btn1" id="boton1"><b>Elefante</b></button>
   <button type="button" class="btn1" id="boton2"><b>Brazo Robótico</b></button>
   <button type="button" class="btn1" id="boton3"><b>Tortuga</b></button>
   <button type="button" class="btn1" id="boton4"><b>Dado: Animación</b></button>
@@ -47,11 +47,11 @@
       <a-entity camera></a-entity>
     </a-scene>
 <script>
-  //Modelo 3D Cachorro Dálmata
+  //Modelo 3D Elefante
     document.getElementById("boton1").addEventListener("click", (e)=>{
                     var el = document.querySelector('#entityID1');
-                    el.setAttribute("obj-model", 'obj:url(Dog_1p2.obj);mtl:url(Dog_1p2.mtl)');
-                    el.setAttribute("scale",'2.5 2.5 2.5'); })
+                    el.setAttribute("obj-model", 'obj:url(elefante.obj);mtl:url(elefante.mtl)');
+                    el.setAttribute("scale",'4 4 4'); })
   //Modelo 3D Dado con Animación
 document.getElementById("boton4").addEventListener("click", (e)=>{
                     var el = document.querySelector('#cube');
